MODPUBSUB-270 Enable tenant collection topics (#240)
* MODPUBSUB-270 enable tenant collection topics

* MODPUBSUB-270 Add Unit Test

* MODPUBSUB-270 hide application config from coverage

* MODPUBSUB-270 add test with tenant collection topics enabled

* MODPUBSUB-270 wrong pom file for exclusion

* MODPUBSUB-270 end record handler if tenant id is not present

* MODPUBSUB-270 Increase coverage, revert Sonar exc

* MODPUBSUB-270 Fix code smells - swap arguments

* MODPUBSUB-270 Remove commented line from pom

* MODPUBSUB-270 Reorganize imports

---------

Co-authored-by: alexanderkurash <alexander.kurash@gmail.com>